--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Release 0.2.6
+-------------
+
+* Ensure File Type record is exists when attempting to create attachment
+
 Release 0.2.5
 -------------
 
