--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
+Release 0.5.0
+-------------
+* Add SafeFileValidator
+
 Release 0.4.2
 -------------
-
 * Handle None values in str format in initial data for attachment fields
 
 Release 0.4.1
