--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Release 0.5.1
+-------------
+* Remvoe ordering of FileType model
+* Better handling of attachments in admin views
+
 Release 0.5.0
 -------------
 * Add SafeFileValidator
