--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
+Release 0.5.2
+-------------
+* Restore ordering of FileType model
+
+
 Release 0.5.1
 -------------
-* Remvoe ordering of FileType model
+* Remove ordering of FileType model
 * Better handling of attachments in admin views
 
 Release 0.5.0
