--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
-Release 0.7 (in development)
--------------
+Release 0.7
+-----------
+* Remove update endpoint
 * Add support to python 3.8
 * Remove support to python 3.6
 
