--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,8 @@ Release 0.7 (in development)
 -------------
 * Add support to python 3.8
 * Remove support to python 3.6
+* Add support to django 3.0
+* Remove support to django 2.1
 
 
 Release 0.6.1
