--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@ Release 0.8
 -----------
 * Add support to python 3.8
 * Remove support to python 3.6
-* Add support to django 3.0
+* Add support to django 3.0 and 3.1
 * Remove support to django 2.1
 
 Release 0.7
