--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Release 0.11
+--------------
+* increased hyperlink field size
+* tweaked Attachment admin
+
+
 Release 0.10.1
 --------------
 * Fixed base serializer
